2006-02-02  Brent Smith  <gnome@nextreality.net>

	* src/yelp-base.c: (yelp_base_new):
	Remove some references to functions (in comments) that no longer exist.

==================== 2.13.3 ====================

2006-01-30  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.13.4

2006-01-30  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-toc-pager.c:
	* stylesheets/toc2html.xsl:
	- Bury man and info under 'Command Line Help'

2006-01-29  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-html.cpp: 
	Workaround for a11y issues.  Should fix bug #157941

2006-01-29  Brent Smith  <gnome@nextreality.net>

	* data/man.xml.in:
	* src/yelp-man-pager.c: (man_section_process):
	* src/yelp-toc-pager.c: (add_man_page_to_toc),
	(process_mandir_pending):
	add support for mapping several man sections, such as 1,
	1p, etc. to a single TOC section in data/man.xml.in, fixes #328172
	Also added two new sections to data/man.xml.in that need translated,
	"POSIX Headers" and "POSIX Functions"

2006-01-29  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-toc-pager.c: 
	Fix some memory leaks
	
2006-01-28  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	More robust handling when doing basic search.  Should fix #328464

2006-01-28  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (create_toc_from_index):
	Don't call g_dir_close() unless we successfully opened the dir;
	Also, skip adding a directory to the man page TOC if we can't stat()
	it, fixes #328953

2006-01-26  Brent Smith  <gnome@nextreality.net>

	* README:
	updated the README to reflect the requirement on gnome-doc-utils 0.5.2
	bumped scrollkeeper version to 0.3.14

2006-01-26  Brent Smith  <gnome@nextreality.net>

	* src/yelp-settings.c:
	Use the /desktop/gnome/interface/document_font_name gconf key
	for the default font, instead of font_name

2006-01-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-print.c: 
	* src/yelp-toc-pager.c: 